# youtube-list-app

./: README.md
backend/actix-app/: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  compose.yaml
backend/actix-app/src/: main.rs
backend/actix-app/src/handler/: auth.rs  data.rs
backend/actix-app/src/logic/: get_data.rs  herder_info.rs  mod.rs  oauth.rs
backend/actix-app/src/outer/: googleoauth.rs  mod.rs  redis.rs  youtube.rs
backend/redis/: Dockerfile  compose.yaml  redis.conf
frontend/react-app/: package-lock.json  package.json
frontend/react-app/src/: App.tsx  env.ts  index.tsx
frontend/react-app/src/_components/: Body.tsx  Header.tsx  List.tsx  YoutubeForm.tsx  iframe.css
frontend/react-app/src/_utils/: auth.ts  getPlaylist.ts  regex.ts  theme.ts  type.ts  yupJp.ts
